# opg-lpa

./: .cypress-cucumber-preprocessorrc.json  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  .tool-versions  CODEOWNERS  LICENSE  Makefile  README.md  TECH_DEBT.md  apicalls  apiweblog  build_trigger  composer.json  cypress.config.js  cypress.json  docker-compose.commands.yml  docker-compose.front-mezzio-test.yml  docker-compose.mezzio.yml  docker-compose.yml  eslint.config.mjs  merge-repo.sh  metadata.json  package-lock.json  package.json  phpcs.xml.dist  phpstan.neon  renovate.json  requirements.txt  testgithub  working_notes.md
scripts/pipeline/: pyproject.toml  requirements.txt
scripts/pipeline/auto_approve_hold/: auto_approve_hold.sh  sampleworkflow.json  slack_approval_warning.sh
scripts/pipeline/cancel_previous_jobs/: README.md  cancel_redundant_builds.py
scripts/pipeline/check_ecr_scan_results/: README.md  aws_ecr_scan_results.py  requirements.txt
scripts/pipeline/ci_ingress/: ci_ingress.py  pyproject.toml  requirements.in  requirements.txt
scripts/pipeline/cloudwatch_alarms/: cloudwatch_alarms.py  requirements.txt
scripts/pipeline/ecs_monitor/: ecs_monitor.py
scripts/pipeline/environment_cleanup/: environment_cleanup.sh
scripts/pipeline/healthcheck_test/: healthcheck_test.py
scripts/pipeline/lib/: ECSMonitor.py  pyproject.toml  setup.py
scripts/pipeline/php_coverage/: check_coverage.php
scripts/pipeline/set_environment_variables/: set_image_tag.sh  (+5 more)
(+5652 files in other folders)
