[project]
name = "pipeline-scripts"
version = "0.0.0"
requires-python = "==3.14.5"
dependencies = [
    "awscli==1.44.83",
    "boto3==1.42.93",
    "requests==2.33.1",
    "pipelinescriptslib",
]
[tool.uv]
package = false
[tool.uv.sources]
pipelinescriptslib = { path = "lib", editable = true }
[tool.uv.workspace]
members = []
